# Image-to-video-eda

./: .gitignore  Makefile  README.md  pyproject.toml
config/: settings.py
image_to_video_eda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
notebooks/: 01_gen_iv2_eda.ipynb
src/image_to_video_eda.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/mongo/: asset_gen_jobs.py  mongo_db_client.py
st_dashboard/: 🔎_Overview.py
st_dashboard/charts/: overview.py  task_breakdown.py
st_dashboard/data/: constants.py  loader.py  transforms.py
st_dashboard/pages/: 🧩_Task_Breakdown.py
st_dashboard/theme/: style.css
